--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,6 @@
       <h2>Just a Simple Dictionary</h2>
       <h4>Select a word to get meaning</h4>
     </div>
-    <script src="popup.js"></script>
+    <script src=""></script>
   </body>
 </html>
