--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
   <body>
     <div id="meaning">
       <h2>Just a Simple Dictionary</h2>
-      <h4>Select a word to get meaning</h4>
+      <h4>Select a word and press 'd' to get meaning</h4>
     </div>
     <script src=""></script>
   </body>
